--- a/p/pubs.bib
+++ b/p/pubs.bib
@@ -1,6 +1,37 @@
 % All Mehdi Bouaziz's publications
+
+@inproceedings{BauMineBotbolBouaziz-SOAP22,
+  author = {Guillaume Bau and Antoine Min\'e and Vincent Botbol and Mehdi Bouaziz},
+  title = {Abstract Interpretation of Michelson smart-contracts},
+  year = {2022},
+  month = {June},
+  booktitle = {Static Analysis and Operations of Programming Languages (SOAP 2022)},
+  publisher = {ACM},
+  url = {http://mehdi.bouaziz.org/p/BauMineBotbolBouaziz-SOAP22.pdf}
+}
+
+@inproceedings{CicekBouazizChoDistefano-SAS20,
+  author = {Ezgi Çiçek and Mehdi Bouaziz and Sungkeun Cho and Dino Distefano},
+  title = {Static Resource Analysis at Scale},
+  year = {2020},
+  month = {November},
+  booktitle = {Static Analysis Symposium (SAS 2020)},
+  publisher = {Springer},
+  url = {http://mehdi.bouaziz.org/p/CicekBouazizChoDistefano-SAS20.pdf}
+}
+
+@inproceedings{BarnettBouazizFahndrichLogozzo-Bytecode13,
+  author = {Michael Barnett and Mehdi Bouaziz and Manuel F\"ahndrich and Francesco Logozzo},
+  title = {A case for static analyzers in the cloud},
+  year = {2013},
+  month = {March},
+  booktitle = {8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)},
+  publisher = {Elsevier},
+  url = {http://mehdi.bouaziz.org/p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf}
+}
+
 @inproceedings{BouazizLogozzoFahndrich-APLAS12,
-  author = {Bouaziz, Mehdi and Francesco Logozzo and Manuel Fähndrich},
+  author = {Mehdi Bouaziz and Francesco Logozzo and Manuel F\"ahndrich},
   title = {Inference of Necessary Field Conditions with Abstract Interpretation},
   year = {2012},
   month = {December},
@@ -9,11 +40,12 @@
   volume = {7705},
   pages = {173--189},
   publisher = {Springer},
-  url = {http://www.bouaziz.me/p/BouazizLogozzoFahndrich-APLAS12.pdf},
+  url = {http://mehdi.bouaziz.org/p/BouazizLogozzoFahndrich-APLAS12.pdf},
   doi = {10.1007/978-3-642-35182-2_13}
 }
+
 @inproceedings{Bouaziz-NSAD12,
-  author = {Bouaziz, Mehdi},
+  author = {Mehdi Bouaziz},
   title = {\textsf{TreeKs}: A Functor to Make Numerical Abstract Domains Scalable},
   year = {2012},
   month = {September},
@@ -21,56 +53,56 @@
   volume = {287},
   pages = {41--52},
   publisher = {Elsevier},
-  url = {http://www.bouaziz.me/p/Bouaziz-NSAD12.pdf},
+  url = {http://mehdi.bouaziz.org/p/Bouaziz-NSAD12.pdf},
   doi = {10.1016/j.entcs.2012.09.005},
   issn = {1571-0661}
 }
-@unpublished{Bouaziz-SIT11,
-  author = {Bouaziz, Mehdi},
+
+@techreport{Bouaziz-SIT11,
+  author = {Mehdi Bouaziz},
   title = {Jsx: a symbolic evaluator for JavaScript},
   year = {2011},
   month = {February},
   institution = {Stevens Institute of Technology},
   address = {Hoboken, NJ, USA},
-  note = {unpublished report}
+  note = {Technical report}
 }
+
 @mastersthesis{Bouaziz-ENS10,
-  author = {Bouaziz, Mehdi},
-  title = {\textsf{TreeKs}: un foncteur pour faire passer les domains numériques à l'échelle},
+  author = {Mehdi Bouaziz},
+  title = {\textsf{TreeKs}: un foncteur pour faire passer les domaines num\'eriques \`a l'\'echelle},
   year = {2010},
   month = {August},
-  school = {École normale supérieure},
+  school = {\'Ecole normale sup\'erieure},
   address = {Paris, France},
-  url = {http://www.bouaziz.me/p/Bouaziz-ENS10.pdf}
+  url = {http://mehdi.bouaziz.org/p/Bouaziz-ENS10.pdf}
 }
+
 @techreport{BarbinBouaziz-MLstate09,
-  author = {Mathieu Barbin and Bouaziz, Mehdi},
+  author = {Mathieu Barbin and Mehdi Bouaziz},
   title = {A Unified Library of Primitives for QML Compilers and Interpreters},
   year = {2009},
   month = {September},
-  url = {http://www.bouaziz.me/p/BarbinBouaziz-MLstate09.pdf}
+  institution = {MLstate},
+  url = {http://mehdi.bouaziz.org/p/BarbinBouaziz-MLstate09.pdf}
 }
+
 @techreport{Bouaziz-MLstate09,
-  author = {Bouaziz, Mehdi},
+  author = {Mehdi Bouaziz},
   title = {Optimized Client-Server Distribution of Ajax Web Applications},
   year = {2009},
   month = {September},
-  type = {internship report},
-  url = {http://www.bouaziz.me/p/Bouaziz-MLstate09.pdf}
+  institution = {MLstate},
+  type = {Internship report},
+  url = {http://mehdi.bouaziz.org/p/Bouaziz-MLstate09.pdf}
 }
+
 @techreport{Bouaziz-MLstate08,
-  author = {Bouaziz, Mehdi},
-  title = {Approximation statique de propriétés d'applications web},
+  author = {Mehdi Bouaziz},
+  title = {Approximation statique de propri\'et\'es d'applications web},
   year = {2008},
   month = {September},
-  type = {internship report},
-  url = {http://www.bouaziz.me/p/Bouaziz-MLstate08.pdf}
-}
-@inproceedings{BarnettBouazizFahndrichLogozzo-Bytecode13,
-  author = {Michael Barnett and Bouaziz, Mehdi and Manuel Fähndrich and Francesco Logozzo},
-  title = {A case for static analyzers in the cloud},
-  year = {2013},
-  month = {March},
-  booktitle = {8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)},
-  url = {http://www.bouaziz.me/p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf}
+  institution = {MLstate},
+  type = {Internship report},
+  url = {http://mehdi.bouaziz.org/p/Bouaziz-MLstate08.pdf}
 }
